--- a/03.pre_Activation_Function.ipynb
+++ b/03.pre_Activation_Function.ipynb
@@ -44,7 +44,7 @@
     "import numpy as np\n",
     "import matplotlib.pylab as plt\n",
     "import sys\n",
-    "sys.path.append(\"/home/xixixi/Dive-into-DL-PyTorch/code\")\n",
+    "sys.path.append(\"/home/xixixi/桌面/Dive-into-DL-PyTorch/code\")\n",
     "import d2lzh_pytorch as d2l"
    ]
   },
