--- a/03_Multilayer_Perceptron(MLP).ipynb
+++ b/03_Multilayer_Perceptron(MLP).ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
     "import sys\n",
-    "sys.path.append(\"/home/xixixi/Dive-into-DL-PyTorch/code\")\n",
+    "sys.path.append(\"/home/xixixi/桌面/Dive-into-DL-PyTorch/code\")\n",
     "import d2lzh_pytorch as d2l\n",
     "\n",
     "batch_size = 256\n",
