--- a/02_Softmax.ipynb
+++ b/02_Softmax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import torchvision\n",
     "import numpy as np\n",
     "import sys\n",
-    "sys.path.append(\"/home/xixixi/Dive-into-DL-PyTorch/code\")\n",
+    "sys.path.append(\"/home/xixixi/桌面/Dive-into-DL-PyTorch/code\")\n",
     "import d2lzh_pytorch as d2l"
    ]
   },
